# AVideo

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/etrans/com/avideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpeg-example.cpp  native-lib.cpp
app/src/main/java/etrans/com/avideo/: Main2Activity.java  MainActivity.java  MyApplication.java  SecondActivity.java  TestActivity.java
app/src/main/java/etrans/com/avideo/muxer/: AudioEncoderThread.java  FileUtils.java  MediaMuxerActivity.java  MediaMuxerThread.java  VideoEncoderThread.java
app/src/main/java/etrans/com/avideo/onlyh264/: H264Encoder.java
app/src/main/res/layout/: activity_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/etrans/com/avideo/: ExampleUnitTest.java
ffmpegmetadataretriever/: CMakeLists.txt  build.gradle
ffmpegmetadataretriever/src/androidTest/java/com/cv/led/ffmpegmetadataretriever/: ExampleInstrumentedTest.java
ffmpegmetadataretriever/src/main/: AndroidManifest.xml
ffmpegmetadataretriever/src/main/cpp/: ffmpeg_mediametadataretriever.cpp  ffmpeg_utils.cpp  load_metadataretriever.cpp  mediametadataretriever.cpp
ffmpegmetadataretriever/src/main/cpp/include/: Error.h  Mutex.h  android_log.h  ffmpeg_mediametadataretriever.h  ffmpeg_utils.h  mediametadataretriever.h
ffmpegmetadataretriever/src/main/java/com/cv/led/ffmpegmetadataretriever/: ImageInputStream.java  LFFmpegMediaMetadataRetriever.java
ffmpegmetadataretriever/src/main/res/values/: strings.xml
ffmpegmetadataretriever/src/test/java/com/cv/led/ffmpegmetadataretriever/: ExampleUnitTest.java
